--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 numpy>=1.21.0
 PyPDF2>=3.0.0
 langchain>=0.1.0
-pysqlite3-binary
 chromadb>=0.4.24
 langchain-huggingface>=0.1.0
 streamlit>=1.25.0
@@ -10,3 +9,6 @@ langchain_groq
 sentence-transformers>=2.2.2
 torch>=2.0.0
 langchain-groq>=0.1.0
+pandas
+python-docx
+markdown2
